2013-10-17  Moritz Bunkus  <moritz@bunkus.org>

        * build system: bug fix: fix autodetection of Boost's library path
        if it is installed in the multiarch directories
        (e.g. /usr/lib/i386-linux-gnu or /usr/lib/x86_64-linux-gnu).

2013-10-04  Moritz Bunkus  <moritz@bunkus.org>

        * mmg: bug fix: saved window widths were growing by 1 pixel each
        time mmg was exited.

2013-10-03  Moritz Bunkus  <moritz@bunkus.org>

        * documentation: Added a German translation of the man pages by
        Chris Leick (see AUTHORS).

2013-10-02  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: bug fix: Reading OGM files with chapter entries not
        encoded in the system's local character set has been fixed. During
        identification the number of chapter entries is still output by
        removing any non-ASCII characters from the chapter entries. When
        muxing an additional warning is output if parsing those chapter
        entries fails, e.g. due to the format being wrong or due to the
        charset guessed wrongly. Fixes #919.

2013-09-17  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: bug fix: The "duration" element was calculated wrong
        if the first element in the file wasn't the one with the smallest
        timestamp. To be precise, it was too short by the difference
        between the first timestamp and the smallest one (e.g with video
        sequences timestamped 80ms, 0ms, 40ms, 120ms... the duration was
        80ms too short).

2013-09-16  Moritz Bunkus  <moritz@bunkus.org>

        * Released v6.4.1.

        * mkvmerge: bug fix: fixed packet ordering regression introduced
        in 6.4.0 if --default-duration is used for a track.

2013-09-15  Moritz Bunkus  <moritz@bunkus.org>

        * Released v6.4.0.

        * mkvextract: new feature: Implemented extraction of Opus tracks
        into OggOpus files.

2013-09-14  Monty Montgomery  <xiphmont@gmail.com>
