@@ -252,3 +252,4 @@ T_403opus_remux_final:da99246c61326c47a530f95948b088be:passed:20130705-135811:0.
 T_404opus_extraction:0aba264a50870d5cd62d8d12543898bd:passed:20130915-201931:0.050758351
 T_405packet_ordering_and_default_duration:82371939190a54b30998961d1037d491:passed:20130916-211719:0.258475566
 T_406ogm_chapters_ansi_encoded:32ea751b26cd868a808834a3473d43f5-902ad8d2388a75090804d252647310df-2f4b4e780b3ef05ed0a01e875fcd7fca:passed:20131002-230255:0.275447568
+T_407empty_tag_and_chapter_files:9b56c96b16de691f479a0bff09f7f3b3-9b56c96b16de691f479a0bff09f7f3b3-9b56c96b16de691f479a0bff09f7f3b3:passed:20131018-202312:0.131204626
